Refactor Ops Desk code for maintainability
* Inline single-use variables.
* Remove incorrect/less-than-helpful JavaDoc comments.
* Remove redundant casts.
* Remove unused/unnecessary/redundant code.
* Make use of streams and collections more concise.
* Make use of List.of() instead of Arrays.asList().
* Use actual Unicode characters instead of escape sequences.
* Fix spelling.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>